--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="img/avatar-perfil.png" alt="avatar da gigi" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou estudante_</p>
         <h1>Eu estudo</h1>
@@ -20,14 +20,14 @@
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
-            <p class="badge bg-secondary">HTML</p>
+            <p class="badge bg-secondary">cozinho</p>
             <p class="badge bg-secondary">Estudo</p>
-            <p class="badge bg-secondary">JavaScript</p>
-            <p class="badge bg-secondary">Médio</p>
+            <p class="badge bg-secondary">Trabalho</p>
+            <p class="badge bg-secondary">Curso o Ensino Médio</p>
         </div>
     </header>
     <main class="container mt-5">
-        <h2>Meus Gostos</h2>
+        <h2>Sobre mim</h2>
         <div class="row">
             <!-- Projeto 1 -->
             <div class="col-md-4">
@@ -49,12 +49,10 @@
                     <div class="card-body">
                         <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
                             Artificial</h5>
-                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
-                            impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
-                            pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
-                            futuro da IA.</p>
+                        <p class="card-text">Este projeto é para falar sobre mim, e o que eu faço
+                    .</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
-                            o projeto</button>
+                            </button>
                     </div>
                 </div>
             </div>
@@ -62,13 +60,14 @@
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="img/projeto-3.png" class="card-img-top" alt="Eu">
                     <div class="card-body">
-                        <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
+                        <h5 class="card-title">O que eu gosto
                         </h5>
-                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                            forma da Terra através de cenários dinâmicos e diálogos informativos.
+                        <p class="card-text">Gosto muito de ouvir música, assistir filmes, ver séries e principalmente de dormir(dormiria o dia todo se pudesse)
+                            Ouço muitas músicas, minha favorita é "Billie Bossa Nova" 
+
+        
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
@@ -110,8 +109,8 @@
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
-                    <a href="https://github.com/femascheti/minhas-leituras">Ver código do projeto</a>
+                    <a href="https://github.com/yokoonosad/gigi.git/">Ver projeto ao vivo</a>
+                    <a href="https://github.com/yokoonosad/gigi.git">Ver código do projeto</a>
                 </div>
             </div>
         </div>
